--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Tony Tsai's blog # 網站標題
-subtitle: 用hexo建立的blog # 網站副標題
-description: 使用hexo建立的blog # 網站描述
+title: Tony Tsai # 網站標題
+subtitle:  # 網站副標題
+description:  # 網站描述
 keywords:
 author: Tony Tsai # 您的名字
 language: zh-TW # 網站所使用的語言，預設為en
@@ -50,12 +50,15 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 5
   order_by: -date
   
 # Category & Tag
 default_category: uncategorized
 category_map:
+  程式設計: Software
+  生活日誌: Life
+  旅行手札: Travel
 tag_map:
 
 # Date / Time format
@@ -67,18 +70,18 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next 
+theme: Icarus 
 # theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:Tony427/Tony427.github.io.git
+  repo: https://github.com/Tony427/Tony427.github.io.git
   branch: master
